Use ListView common control rather than a hand-drawn grid
XXX: LVN_GETEMPTYMARKUP (not working)

XXX: 'action' this doesn't seem to work quite right, stops cycling around
the possibilities after the first cycle...

XXX: Calculating column widths is still a bit slow, perhaps avoid
constant DC create/delete

XXX: tooltips not really working as I would like...

--- a/Makefile.am
+++ b/Makefile.am
@@ -173,6 +173,8 @@ inilint_SOURCES = \
 	IOStreamProvider.h \
 	KeysSetting.cc \
 	KeysSetting.h \
+	listview.cc \
+	listview.h \
 	localdir.cc \
 	localdir.h \
 	LogFile.cc \
@@ -211,9 +213,6 @@ inilint_SOURCES = \
 	PackageSpecification.cc \
 	PackageSpecification.h \
 	PackageTrust.h \
-	PickCategoryLine.cc \
-	PickCategoryLine.h \
-	PickLine.h \
 	PickPackageLine.cc \
 	PickPackageLine.h \
 	PickView.cc \
