Retrieve data via callback, rather than pushing into control

--- a/Makefile.am
+++ b/Makefile.am
@@ -213,6 +213,8 @@ inilint_SOURCES = \
 	PackageSpecification.cc \
 	PackageSpecification.h \
 	PackageTrust.h \
+	PickPackageLine.cc \
+	PickPackageLine.h \
 	PickView.cc \
 	PickView.h \
 	postinstall.cc \
