Use a ListView common control rather than a hand-built grid
Each line is implemented by an object of a subclass of ListViewLine, either
PickPackageLine, or (in catgeory view) PickCategoryLine

v2:
Defer constructing category tree until packagedb is available
Also handle an empty category tree
Remove unused bitmaps
Scoping of strings returned to LVN_GETDISPINFO
Avoid doubled 'all' category
Update some number of lines, rather than just the current one

v3:
Speed up calculating column widths, by caching the DC used
Don't bother recalculating column widths when obsolete packages are
shown/hidden, just allow for obsolete packages always (which makes hardly
any difference)
Don't bother calculating column widths separately for category view since
they are now always the same.

v4:
Store current category action in CategoryTree
Recurse category action onto packages

This slightly changes the behaviour: previously, a category action only
effected packages which matched the name search filter.  Now all packages in
contained by the category are effected.

v5:
When updating, turn off redraw before emptying listview
Make headers a parameter to init
Don't leak contents
Only resize columns once
Remove ListView OnMessage as it has nothing to do
Never use a column width less than minimum
Use LVS_SINGLESEL
Factor out string cache for re-use
Preserve focused row over ListvIew::setContents()

--- a/Makefile.am
+++ b/Makefile.am
@@ -42,17 +42,11 @@ EXTRA_DIST = \
 	CONTRIBUTORS \
 	COPYING \
 	bootstrap.sh \
-	check-na.bmp \
-	check-no.bmp \
-	check-yes.bmp \
-	choose-spin.bmp \
 	cygwin.ico \
 	cygwin-setup.ico \
 	cygwin-terminal.ico \
 	setup.exe.manifest \
-	setup64.exe.manifest \
-	tree-minus.bmp \
-	tree-plus.bmp
+	setup64.exe.manifest
 
 # iniparse.hh is generated from iniparse.yy via bison -d, so it needs to be
 # included here for proper tracking (but not iniparse.cc, since automake
@@ -172,6 +166,8 @@ inilint_SOURCES = \
 	KeysSetting.h \
 	libsolv.cc \
 	libsolv.h \
+	ListView.cc \
+	ListView.h \
 	localdir.cc \
 	localdir.h \
 	LogFile.cc \
@@ -207,7 +203,6 @@ inilint_SOURCES = \
 	PackageTrust.h \
 	PickCategoryLine.cc \
 	PickCategoryLine.h \
-	PickLine.h \
 	PickPackageLine.cc \
 	PickPackageLine.h \
 	PickView.cc \
